--- a/BertScout2022/BertScout2022/MainPage.xaml
+++ b/BertScout2022/BertScout2022/MainPage.xaml
@@ -43,7 +43,8 @@
                     />
             </AbsoluteLayout>
             <Frame
-                BackgroundColor="#007F00"
+                x:Name="frame"
+                BackgroundColor="#008000"
                 Margin="0,0,20,0"
                 Padding="10,4,10,4"
                 CornerRadius="0"
@@ -510,7 +511,27 @@
                                 FontSize="15"
                                 VerticalTextAlignment="Start"
                                 HorizontalTextAlignment="Start"
-                                Text=" "
+                                Text=""
+                                />
+                        </AbsoluteLayout>
+                        <AbsoluteLayout>
+                            <Button
+                                x:Name="Delete_Match"
+                                BackgroundColor="Red"
+                                WidthRequest="200"
+                                HeightRequest="50"
+                                Text="Delete Match"
+                                Clicked="Delete_Match_Clicked"
+                                />
+                            <Entry
+                                x:Name="Delete_Match_Password"
+                                Margin="210,0,10,0"
+                                WidthRequest="351"
+                                HeightRequest="50"
+                                FontSize="20"
+                                VerticalTextAlignment="Start"
+                                HorizontalTextAlignment="Start"
+                                Text=""
                                 />
                         </AbsoluteLayout>
                     </StackLayout>
